# tree-registration-and-matching

./: .dockerignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: publish-image.yml  pytest.yaml
examples/: benchmark_registration.py  example_registration.ipynb  example_registration_real_data.ipynb  example_registration_real_data_CHM.ipynb  registration_robustness.ipynb  show_crowns.ipynb  show_example_data.ipynb
scratch/: prepare_example_data.py  try_hyyppa.py
tests/: test_basic.py  test_example_data.py
tree_registration_and_matching/: add_attributes.py  benchmark.py  constants.py  eval.py  example_data.py  modified_groth.py  register_CHM.py  register_MEE.py  register_hyyppa.py  utils.py
tree_registration_and_matching/entrypoints/: register_trees_to_CHM.py
