[project]
name = "tree-registration-and-matching"
version = "0.1.0"
description = "Algorithms to register or sets of trees or find correspondences between them"
authors = [
    {name = "David Russell",email = "djrussell@ucdavis.edu"}
]
license = {text = "BSD-3"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)"
]
